--- a/task.ipynb
+++ b/task.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "ae9e4f74",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "53b8c2dc",
    "metadata": {},
    "outputs": [],
@@ -75,10 +75,10 @@
    "source": [
     "functions that:\n",
     "1. add - done\n",
-    "2. update\n",
-    "3. delete\n",
-    "4. mark as in progress or done\n",
-    "5. list all\n",
+    "2. update - done\n",
+    "3. delete - done\n",
+    "4. mark as in progress or done - done\n",
+    "5. list all - done\n",
     "6. list all done\n",
     "7. list all not done\n",
     "8. list tasks that are in progress\n"
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "67c7629e",
    "metadata": {},
    "outputs": [],
@@ -94,23 +94,80 @@
     "# list all the tasks as no filter by status is applied\n",
     "def list__tasks(status_filter = None):\n",
     "    tasks = load_tasks()\n",
-    "    #here i can potentially add a filter by the status but i am too lazy\n",
+    "    if status_filter:\n",
+    "        tasks= [ task for task in tasks if task[\"status\"] == status_filter]\n",
+    "        # list comprehension that filters the tasks with the needed status\n",
     "    for task in tasks:\n",
-    "        print(f\"{task[\"id\"]}: \")"
+    "        print(f\"{task[\"id\"]}: {task[\"description\"]} - {task[status]} - {tas[\"created_at\"]} - {task[\"updated_at\"]}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "82b81f01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def update_task(task_id, status ):\n",
+    "    tasks = load_tasks()\n",
+    "    for task in tasks:\n",
+    "        if task[\"id\" ] == task_id:\n",
+    "            task[\"status\"] = status\n",
+    "            task [\"updated_at\"] = now\n",
+    "            save_tasks(tasks)\n",
+    "            print(f\"task {task_id} updated to {status}\")\n",
+    "            return\n",
+    "    print(f\"task {task_id} not found\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "907def7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def delete_task(task_id):\n",
+    "    tasks = load_tasks()\n",
+    "    new_tasks = [task for task in tasks if task[\"id\"] != task_id]\n",
+    "    #will create another list whrere the id of tasks are not the one that should be excluded \n",
+    "    if len (tasks) == len(new_tasks):\n",
+    "        print(f\"task{task_id}not found\")\n",
+    "        return\n",
+    "    save_tasks(new_tasks)\n",
+    "    print(\"soccessefully delated task {task_id}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c247de33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mark_status(task_id, status):\n",
+    "    tasks = load_tasks()\n",
+    "    for task in rasks:\n",
+    "        if task[\"id\"] == task_id:\n",
+    "            task[\"status\"] = status\n",
+    "            task[\"updated_at\"] = datatime.now().isoformat()\n",
+    "            save_tasks(tasks)\n",
+    "            print(f\"task {task_is} marked as {status}\")\n",
+    "            return\n",
+    "    print(\"this task was not found \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "a150d468",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "incomplete input (12697257.py, line 31)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[2], line 31\u001b[1;36m\u001b[0m\n\u001b[1;33m    \u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m incomplete input\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "error in interpreting your command\n"
      ]
     }
    ],
